toy aplication. cambio de background y creacion de botones

--- a/PUZZLIVERSE/src/app/tab1/tab1.page.scss
+++ b/PUZZLIVERSE/src/app/tab1/tab1.page.scss
@@ -1,14 +1,19 @@
-.welcome-card img {
-  max-height: 35vh;
-  overflow: hidden;
-}
 
-.welcome-card {
+.dTable{
   background-color:aqua;
-
 }
 
 .titulo{
   text-align: center;
   text-decoration-color: salmon;
 }
+
+
+  h2 {
+    font-size: 5rem;
+    line-height: 4.5rem;
+  }
+  .sub-title {
+    padding: 20px 0px;
+  }
+
