--- a/PUZZLIVERSE/src/app/tab1/tab1.page.html
+++ b/PUZZLIVERSE/src/app/tab1/tab1.page.html
@@ -1,41 +1,16 @@
-<ion-header class="c">
-  <ion-toolbar>
-    <ion-title class="titulo">
-      PUZZLIVERSE
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content>
-    <ion-card class="welcome-card">
-      <img src="/assets/shapes.svg" alt="" />
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+<ion-content class="c" padding text-center>
+  <div class="dTable">
+    <div class="dCell">
+      <h2 margin-bottom >PUZZLIVERSE</h2>
+      <p class="sub-title">-www.eso.org-</p>
+      <div class="container">
+        <button ion-button block (click)="goSpaceShooter($event, user)">Imagen de la semana</button>
+        <button ion-button block (click)="doLogout()">Jugar</button>
+        <button ion-button block (click)="goSpaceShooter($event, null)">Recort</button>
+        <button ion-button block (click)="doSignin()">Ajustes</button>
+        <button ion-button block (click)="topScore($event)">Como jugar</button>
+      </div>
+    </div>
+  </div>
 </ion-content>
