--- a/PUZZLIVERSE/src/app/tab2/tab2.page.scss
+++ b/PUZZLIVERSE/src/app/tab2/tab2.page.scss
@@ -1,1 +1,14 @@
+ion-content {
+    --background: url(/assets/fondo1.png) no-repeat center/cover fixed;
+  }
+.menu{position: fixed; right: 15px;
+}
+.menu2{
 
+}
+.container{
+    color: white;
+    
+}
+.ion-select{.select-icon { .select-icon-inner {
+    color: yellow !important;}}}
